# TempEngine

./: .gitignore  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/src/: AssetManager.cpp  AssetManager.h  Math.h  Window.cpp  Window.h
Engine/src/Renderer/: Graphics.h  OpenGL.cpp  OpenGL.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
Sandbox/: CMakeLists.txt
Sandbox/src/: main.cpp
